fix: remove insane z-index on bootbox modals

--- a/less/style.less
+++ b/less/style.less
@@ -228,7 +228,7 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 		}
 
 		.formatting-bar .formatting-group li:focus, .formatting-bar .formatting-group li:hover {
-			background-color: #444; 
+			background-color: #444;
 		}
 	}
 }
@@ -250,10 +250,6 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 			}
 		}
 	}
-}
-
-.bootbox.modal {
-	z-index: 100001;
 }
 
 .maintenance {
